--- a/apps/ui/index.html
+++ b/apps/ui/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#09090B" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#FAFAFA" media="(prefers-color-scheme: light)" />
     <meta name="description" content="Understand your bank statements. Private, local, secure." />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <title>Wakaru</title>
   </head>
   <body>
