add seline analytics

--- a/apps/ui/index.html
+++ b/apps/ui/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Understand your bank statements. Private, local, secure." />
     <link rel="icon" type="image/png" href="/logo.png" />
     <title>Wakaru</title>
+    <script async src="https://cdn.seline.com/seline.js" data-token="7428d217483c87d"></script>
   </head>
   <body>
     <div id="root"></div>
